--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mainR.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mainR.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Nanum Gothic', sans-serif;
-    background-color: #f4f5f7;
+  /*   background-color: #f4f5f7; */
 /*     width: 1912px; */
 }
 
