--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mainIndex.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mainIndex.css
@@ -1,4 +1,5 @@
-*{  font-family: "Times New Roman", Times, serif;}
+@font-face { font-family: 'S-CoreDream-3Light'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff'); font-weight: normal; font-style: normal; }
+*{font-family: 'S-CoreDream-3Light'; src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff') format('woff'); font-weight: normal; font-style: normal;}
 @media (min-width: 576px)
 {.navbar-expand-sm .navbar-nav {flex-direction: row;}
 .navbar-nav {
@@ -68,8 +69,8 @@ textarea{resize: none;}
     display: none;
     float: left;
     min-width: 10rem;
-    padding: .5rem 0;
-    margin: .125rem 0 0;
+/*     padding: .5rem 0;
+    margin: .125rem 0 0; */
     font-size: 1rem;
     color: #212529;
     text-align: left;
@@ -82,7 +83,7 @@ textarea{resize: none;}
 .dropdown-item {
     display: block;
     width: 100%;
-    padding: .25rem 1.5rem;
+  /*   padding: .25rem 1.5rem; */
     clear: both;
     font-weight: 400;
     color: #212529;
@@ -95,12 +96,12 @@ textarea{resize: none;}
 *{margin: 0; padding: 0; box-sizing: border-box;}
 body{font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;}
 ul li{list-style-type: none;}
-a { text-decoration-line: none; color: rgba(255,255,255,.5);}
+a { text-decoration-line: none; color: rgba(255,255,255,0.5);}
 #container{width: 100%; min-width: 1024px;}
 #center-wrap{width: 100%;}
 .header{width: 100%; height: 100px; line-height: 84px;background: #080607;}
-.navi {color:rgba(255,255,255,.5) !important;  width: 1024px; margin: 0 auto;}
-.navi a{color: rgba(255,255,255,.5); }
+.navi {color:rgba(255,255,255,0.5) !important;  width: 1024px; margin: 0 auto;}
+.navi a{color: rgba(255,255,255,0.5); }
 .navi a p{ font-size: 36px; font-weight: 700;  line-height: 15px;}
 .navi a{ float: left;}
 .navi a:hover{color: #fff;}
@@ -109,6 +110,7 @@ a { text-decoration-line: none; color: rgba(255,255,255,.5);}
 .navi ul { display: flex; float: right;}
 .item img{width: 100%;}
 
+.dropdown-menu > a{font-size: 15px !important; height:32px; line-height: 32px; color: #16181b;}
 /*carousel*/
       #slider{
             width: 100%;
@@ -153,10 +155,10 @@ a { text-decoration-line: none; color: rgba(255,255,255,.5);}
 .rolling{position: relative; z-index: 1;  height: 136px; overflow: hidden;}
 .rolling li h3{font-size: 20px; color: #fff; padding:15px}
 .rolling li a {padding: 15px; color: #fff}
-.kiosk{background-image: url(/resources/images/kiosk.png); background-repeat: no-repeat; background-position: right; background-size: 60%;}
-.takeout{background-image: url(/resources/images/takeout.png); background-repeat: no-repeat; background-position: right; background-size: 43%;}
-.display{background-image: url(/resources/images/display.png); background-repeat: no-repeat; background-position: right; background-size: 62%;}
-.community{background-image: url(/resources/images/boa.png); background-repeat: no-repeat; background-position: right; background-size: 53%;}
+.kiosk{background-image: url(/resources/images/main_03.png); background-repeat: no-repeat; background-position: right; background-size: 100% 100%;}
+.takeout{background-image: url(/resources/images/main_02.png); background-repeat: no-repeat; background-position: right; background-size: 100% 100%;}
+.display{background-image: url(/resources/images/main_04.png); background-repeat: no-repeat; background-position: right; background-size: 100% 100%;}
+.community{background-image: url(/resources/images/main_01.png); background-repeat: no-repeat; background-position: right; background-size: 100% 100%;}
 
 .mainFootArea{width: 1024px; height: 40px; margin: 0 auto; position: relative;}
 .footerNoticeArea{position: relative; z-index: 1; float: left; width: 460px; padding: 11px 0 0 0;}
