--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/header.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/header.css
@@ -59,7 +59,14 @@ textarea{resize: none;}
 @media (min-width: 576px){
 .navbar-expand-sm .navbar-nav .dropdown-menu {
     position: absolute;
+
 }}
+.menu-dropmenu {
+    position: absolute;
+    left: -225%;
+}
+
+
 .dropdown-menu {
     position: absolute;
     top: 100%;
