reviewAdd 퍼블리싱 및 takeout부분 모달창 퍼블리싱

--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservated.css
@@ -14,11 +14,12 @@ ul li{list-style-type: none;}
 .value-document{
 	text-align: center;
 	margin:0;
-	padding-top:15px;
+/* 	padding-top:15px; */
+line-height: 66px;
 }
 #dateInnerHTML ,#time,#priceSum{
-	position:relative;
-	left:70px;
+	/* position:relative;
+	left:70px; */
 }
 
 .value-document li{
@@ -34,8 +35,8 @@ ul li{list-style-type: none;}
 	width: 100%;
 	margin: 0 auto;
 	flex-shrink: 0;
-	position: relative;
-	top: 35px;
+position: relative;
+	top: 30px; 
 	border-top:4px solid #eeeeee;
 }
 
@@ -76,7 +77,7 @@ ul li{list-style-type: none;}
 	position: relative;
 	list-style: none;
 	font-size: 1em;
-	right: 70px;
+	/* right: 70px; */
 	min-width: 420px;
 	display: inline-flex;
 }
@@ -344,7 +345,8 @@ ul li{list-style-type: none;}
 }
 .header {
 	display: block;
-	margin-top: 20px;
+	margin-bottom: 30px;
+/* 	margin-top: 20px; */
 }
 
 .data {
@@ -611,3 +613,106 @@ width:300px;
 				0 0 0 1px rgba(0,0,0,0.4);
 }
 .reservedCheck .span{width:100px; margin-right:20px; font-weight: 600;}
+
+
+a.buttonsubmit {
+	transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
+	display: block;
+	margin: 20px auto;
+	max-width: 180px;
+	text-decoration: none;
+	border-radius: 4px;
+	padding: 20px 30px;
+    text-align: center;
+}
+
+a.buttonsubmit {
+	color: rgba(255, 255, 255, 0.6);
+	box-shadow: rgba(30, 22, 54, 0.4) 0 0px 0px 2px inset;
+}
+
+a.buttonsubmit:hover {
+	color: rgba(255, 255, 255, 0.85);
+	box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
+}
+
+
+
+.button_base {
+    margin: 0;
+    border: 0;
+    font-size: 18px;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -100px;
+    width: 200px;
+    height: 50px;
+    text-align: center;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-user-select: none;
+    cursor: default;
+}
+
+.button_base:hover {
+    cursor: pointer;
+}
+/* ### ### ### 03 */
+.b03_skewed_slide_in {
+    overflow: hidden;
+    border: #000000 solid 1px;
+}
+
+.b03_skewed_slide_in div {
+    position: absolute;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    padding: 10px;
+}
+
+.b03_skewed_slide_in div:nth-child(1) {
+    color: #000000;
+    background-color: #ffffff;
+}
+
+.b03_skewed_slide_in div:nth-child(2) {
+    background-color: #000000;
+    width: 230px;
+    transition: all 0.2s ease;
+    -webkit-transition: all 0.2s ease;
+    -moz-transition: all 0.2s ease;
+    transform: translate(-250px, 0px) skewX(-30deg);
+    -webkit-transform: translate(-250px, 0px) skewX(-30deg);
+    -moz-transform: translate(-250px, 0px) skewX(-30deg);
+}
+
+.b03_skewed_slide_in div:nth-child(3) {
+    color: #ffffff;
+    left: -200px;
+    transition: left 0.2s ease;
+    -webkit-transition: left 0.2s ease;
+    -moz-transition: left 0.2s ease;
+}
+
+.b03_skewed_slide_in:hover div:nth-child(2) {
+    transition: all 0.5s ease;
+    -webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    transform: translate(-15px, 0px) skewX(-30deg);
+    -webkit-transform: translate(-15px, 0px) skewX(-30deg);
+    -moz-transform: translate(-15px, 0px) skewX(-30deg);
+}
+
+.b03_skewed_slide_in:hover div:nth-child(3) {
+    left: 0px;
+    transition: left 0.30000000000000004s ease;
+    -webkit-transition: left 0.30000000000000004s ease;
+    -moz-transition: left 0.30000000000000004s ease;
+}
