--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mypage.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mypage.css
@@ -34,7 +34,7 @@ table {
 .MyPage h1 {
     font-size: 25px;
 }
-.container_box{
+.container_box {
     margin: 0 auto;
     overflow: hidden;
     width: 1024px;
@@ -47,6 +47,7 @@ table {
     float: left;
     width: 270px;
     min-height: 350px;
+    padding-right: 30px;
 }
 .aside ul{
     margin-top: 90px;
@@ -76,11 +77,37 @@ table {
     outline: none;
     cursor: pointer;
 }
+#tab_btn li {
+    cursor: pointer;
+}
 #inb {
     width: auto;
     position: relative;
 }
-
+.userPayCardUpdate{
+    width: 92px;
+    height: 28px;
+    font-size: 16px;
+    background: #e69f33;
+    color: black;
+    text-align: center;
+    margin-left: 40px;
+    border-color:#e79210;
+}
+/*카드등록 디자인*/
+.dropDown{
+/*    position: absolute;*/
+    display: none;
+}
+.userPayCardUpdate {
+/*    background: #e69f33 !important; */
+    color: #e69f33 !important;
+    font-weight: 600;
+    cursor: pointer;
+}
+.cardAdd_img {
+    margin: 0 5px 2px 0;
+}
 /*컨텐츠*/
 #contents {
     float: left;
@@ -131,7 +158,7 @@ table {
     height: 20px;
 }
 /*비밀번호 변경*/
-.pwChange {
+.pw_Change {
     width: 90px;
     height: 27px;
     font-size: 13px;
@@ -175,6 +202,7 @@ table {
     outline: none;
     border-color:#e79210;
 }
+
 /***********내가 작성 한 글*************/
 .myWritten-table {
     width: 100%;
@@ -253,9 +281,12 @@ table {
 }
 /*thead*/
 .reservedHead tr th{
-    border-right: 2px solid #ccc;
+/*     border-right: 2px solid #ccc; */
     color: #999;
     font-size: 16px;
+}
+.border_right {
+		border-right: 2px solid #ccc;
 }
 /*tbody*/
 .reservedContainer tr{
@@ -296,3 +327,88 @@ table {
     font-weight: 700;
 }
 .disc{list-style-type: disc; list-style-position: inside;}
+/*카드 등록*/
+.cardAdd {
+/*     margin-top: 200px; */
+    width: 460px;
+    height: 470px;
+    position: relative;
+/*    top: 50%;*/
+    opacity: 1;
+    visibility: visible;
+    background-color: #fff;
+    border: 3px solid #fff;
+/*     left: 400px; */
+    padding: 20px;
+/*    position: fixed;*/
+    text-align: justify;
+    z-index: 10;
+/*     transform:  translate(-50%, -50%); */
+    border-radius: 10px;
+    box-shadow: 0 1px 1px 2px rgba(0.4, 0, 0, 0.4);
+}
+/*결제카드 등록*/
+.cardAdd h2 {
+   border-bottom: 2px solid #333;
+    padding-bottom: 20px;
+    color: #d7ab29;
+    font-weight: 900;
+    text-align: center;
+}
+.paymentCardAdd p1{
+    display: inline-block;
+}
+/*은행,카드번호,만기일, 보안코드,카드 비밀번호*/
+.paymentCardAdd p1 {
+    font-size: 18px;
+    font-weight: 600;
+}
+/*border-bottom*/
+.paymentCardAdd {
+    border-bottom: 1px solid #999;
+    padding: 15px 0 15px 0;
+}
+/*은행*/
+.bank select {
+    width: 100px;
+    height:30px;
+    margin-left: 20px;
+    color: black;
+    font-size: 15px;
+    background-color: #f1f1f1;
+    border: 1px solid #999;
+}
+/*카드번호*/
+.Number {
+    width: 120px;
+    height: 28px;
+    font-size: 15px;
+    padding:0 0 2px 3px;
+    margin-left: 20px;
+    background-color: #f1f1f1;
+/*    border: 1px solid #999;*/
+}
+/*만기일*/
+.validity {
+    color: black;
+    font-size: 15px;
+    background-color: #f1f1f1;
+    border: 1px solid #999;
+}
+.Month {
+    margin: 0 7px 0 20px;
+}
+/*카드조회,카드등록 버튼*/
+.cardButton {
+    width: 80px;
+    height: 35px;
+    font-size: 15px;
+    background:#d1840e;
+    color: #fff;
+    text-align: center;
+    outline: none;
+    border-color:#e79210;
+}
+.Check {
+    margin: 30px 10px 0 120px;
+}
