--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -38,7 +38,7 @@ textarea{resize: none;}
     display: inline-block;
     padding-top: .3125rem;
     padding-bottom: .3125rem;
-    margin-right: 1rem;
+/*     margin-right: 1rem; */
     font-size: 1.25rem;
     line-height: inherit;
     white-space: nowrap;
@@ -96,8 +96,8 @@ textarea{resize: none;}
 a{color:#000; text-decoration:none;}
 body{min-width: 1024px;}
 #container{width:100%; margin: 0 auto;}
-#header{width:100%; background: #4f90cc; margin: 0 auto;}
-.margin{padding-top: 20px; padding-left:300px; background:#e9e9e9;}
+/* #header{width:100%; background: #4f90cc; margin: 0 auto;} */
+/* .margin{padding-top: 20px; padding-left:300px;} */
 #wrap-center{width: 1024px; margin: 0 auto;}
 #wrap-center > .navi ul{
     display: flex; 
@@ -109,7 +109,7 @@ body{min-width: 1024px;}
 	position:relative !important;
 	top:0;
 }
-.navi > ul > li{ margin-right: 15%;}
+/* .navi > ul > li{ margin-right: 15%;} */
 .left-section{float: left; width: 35%;}
 .take{width: 100%; font-size: 16px; background: green; border-radius: 3px; color: white; height: 40px; line-height: 40px;}
 .take > p{margin-left: 20px; font-weight: 700;}
