--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservedList.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/reservedList.css
@@ -84,7 +84,7 @@ body{min-width: 1024px;}
 		left:0; */
 	}
 }
-
+/* 
 @media (min-width:1050px){
 	#calendar{
 		position:absolute;
@@ -93,12 +93,12 @@ body{min-width: 1024px;}
 		float: left;
 		top:115px;
 		left: 10px;
-	/* 	width:50%;
+		width:50%;
 		height:50%;
 		top:0;
-		left:0; */
+		left:0;
 	}
-}
+} */
 .dropdown-menu {
     position: absolute;
     top: 100%;
@@ -139,12 +139,12 @@ body{min-width: 1024px;}
 line-height: 50px; margin-bottom:50px;}
 .reserved-table th {color:#c0c0c0;}
 th , td{border:1px solid #dddddd;}
-#calendar{width:100%; height:100%;}
+/* #calendar{width:100%; height:100%;} */
 .dal{float: right;}
 
 
 
-.button{
+/* .button{
 	-webkit-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 	-moz-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
 	-ms-transition: all 200ms cubic-bezier(0.390, 0.500, 0.150, 1.360);
@@ -170,7 +170,7 @@ th , td{border:1px solid #dddddd;}
 	color: rgba(255, 255, 255, 0.85);
 	box-shadow: rgba(30, 22, 54, 0.7) 0 0px 0px 40px inset;
 }
-
+ */
 .btn {font-size: 14px; white-space:nowrap; /* width:100%; */ /* padding:.8em 1.5em; */
 padding:10px; 
  font-family: Open Sans, Helvetica,Arial,sans-serif; line-height:18px;
@@ -178,20 +178,45 @@ padding:10px;
 transition: border .25s linear, color .25s linear, background-color .25s linear;}
 
 
-.btn.btn-concrete{background-color: #7e8c8d; border-color: #7e8c8d; -webkit-box-shadow: 0 3px 0 #4e5b5c; box-shadow: 0 3px 0 #4e5b5c;}
-.btn.btn-concrete:hover{background-color:#6a7879;}
-.btn.btn-concrete:active{top: 3px; outline: none; -webkit-box-shadow: none; box-shadow: none;}
+/* .btn.btn-concrete{background-color: #7e8c8d; border-color: #7e8c8d; -webkit-box-shadow: 0 3px 0 #4e5b5c; box-shadow: 0 3px 0 #4e5b5c;} */
+/* .btn.btn-concrete:hover{background-color:#6a7879;}
+.btn.btn-concrete:active{top: 3px; outline: none; -webkit-box-shadow: none; box-shadow: none;} */
 
 #calendar{
 /* 	display:none; */
 /* 	float: left; */
   /*   position: absolute; */
   /*   top: 115px; */
-    width: 21%; 
+  /*   width: 60%; */ 
 /*     left: 10px; */
-   height: 21%; 
+  /*  height: 60%;  */
+    position: absolute; 
+         top: 50%; 
+         left: 50%; 
+         transform: translate(-50%, -50%); 
+          background:#ececec; 
+       padding: 1rem 1.5rem; 
+         border-radius: 0.5rem; 
+         display: inline-block;
 }
 
+.modalwrap{
+	z-index:9999;
+	border-radius:25px;
+         position: fixed; 
+         left: 0; 
+         top: 0; 
+         width: 100%; 
+         height: 100%; 
+         text-align:center;
+         background-color: rgba(0, 0, 0, 0.5); 
+         opacity: 0; 
+         visibility: hidden; 
+         display: block !important;
+       
+         transform: scale(1.1); 
+         transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
+}
 
 
 .b04_3d_tick {
@@ -282,14 +307,14 @@ transition: border .25s linear, color .25s linear, background-color .25s linear;
 
 .buttonin {
   display: inline-block;
-  border-radius: 4px;
-  background-color: #f4511e;
+/*   border-radius: 4px; */
+/*   background-color: #f4511e; */
   border: none;
   color: #FFFFFF;
   text-align: center;
   font-size: 16px;
   padding: 15px;
-  width: 220px;
+/*   width: 220px; */
   transition: all 0.5s;
   cursor: pointer;
   margin: 5px;
@@ -324,3 +349,84 @@ transition: border .25s linear, color .25s linear, background-color .25s linear;
 	margin:0 auto;
 }
 
+/* 영수증 출력 모달*/
+.documentPopup{
+		  display: none;   /* Hidden by default */
+ 	
+ 	position: fixed;  /* Stay in place */
+	 z-index: 10000;  /* Sit on top */
+	 left: 0; 
+	 top: 0;  
+	 width: 100%;  /* Full width */
+	  height: 100%; */ /* Full height */
+	 /* overflow: auto;   *//* Enable scroll if needed */
+	 background-color: rgb(0, 0, 0); /* Fallback color */
+	 background-color: rgba(0, 0, 0, 0.4);  /* Black w/ opacity */
+/* 	 position:absolute; */
+	 margin:0 auto;
+}
+.documentCenter{
+ 	  	background-color: #fefefe;
+    margin: 10% auto;  
+	padding: 25px;
+	border: 1px solid #888;
+/* 	height:40px; */
+/* 	min-width:40px; */
+	/* width:100%; */
+	width: 685px; 
+	 border-radius: 10px;
+	 transition: opacity .5s, top .5s;
+	  box-shadow: 0 1px 1px 2px rgba(0, 0, 0, 0.4) inset;
+	  
+	/*  transform: translate(-50%, -50%); */
+}
+.documentCenter h2{text-align: center; margin-top: 20px;}
+.documentUl{margin-top:30px;}
+.menuTable  {width:90%; text-align: center; margin-left: 40px; border-bottom:2px dotted #555555;}
+.menuTable thead {width:100%; border-top:2px dotted #555555; border-bottom:2px dotted #555555;}
+.menuTable thead th{width:30%; padding: 6px; letter-spacing:5px; }
+.totalTable  {width:90%;  margin-left: 40px; text-align: justify; margin-bottom: 40px;}
+.totalTable thead {width:100%; border-bottom:2px dotted #555555;}
+.totalTable thead th{width:30%; padding: 6px; text-align: center;}
+.documentUl > li > span:nth-child(1){font-weight: 600; font-size: 17px; width: 100px; margin-right: 10px;}
+.documentBtnCenter{width:246px; margin: 0 auto;}
+.documentBtnCenter button{
+
+background:#1AAB8A;
+  color:#fff;
+  border:none;
+  position:relative;
+  height:45px;
+  font-size:20px;
+  padding:0 2em;
+  border-radius:5px;
+  cursor:pointer;
+  transition:800ms ease all;
+  outline:none;
+  position:relative;
+  left: 50px;
+}
+.documentBtnCenter button:hover {
+	background:#fff;
+  color:#1AAB8A;
+}
+.documentBtnCenter button:before,.documentBtnCenter button:after{
+  content:'';
+  position:absolute;
+  top:0;
+  right:0;
+  height:2px;
+  width:0;
+  background: #1AAB8A;
+  transition:400ms ease all;
+}
+.documentBtnCenter button:after{
+  right:inherit;
+  top:inherit;
+  left:0;
+  bottom:0;
+}
+.documentBtnCenter button:hover:before,.documentBtnCenter button:hover:after{
+  width:100%;
+  transition:800ms ease all;
+}
