--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -35,14 +35,14 @@ nav ul li:first-child { border-left:none; }
 .image_out_div { margin-bottom: -5px; }
 .order_history_div { clear:both; position:relative; top:60px; color:#fff; width:1024px;}
 .order_history_p { font:bold 20px Dotum; position:relative; left:120px; line-height:10px;}
-.order_list_wrap{width:1024px; height:300px; clear: both;  background-color: #fbceb1; padding-top: 20px;}
-.order_list_div{ float:left; width:60%; height:200px; background: #fff; margin-top:50px; overflow-y:scroll; margin-left:35px;}
+.order_list_wrap{width:1024px;clear: both;  background-color: #fbceb1; }
+.order_list_div{  width:75%; height:200px;   overflow-y:scroll; }
 /* .order_list_div > p{text-align:center; color:#fff; margin-top:10px; margin-bottom:10px;} */
 .p{    font-size: 18px;
     font-weight: 700;
     text-align: center;
     color: #333333;}
-.order_payment_div {width:33%; float:right; height: 200px; margin-top:50px; margin-right:15px;}
+.order_payment_div {float:right; height: 200px;}
 .paymentBtn { width: 100%; height:40%; font-size:15pt; }
 .cancelBtn { width:100%; height:40%; font-size:15pt; }
 .total_table{ width:100%; height: 20%; padding-left:30px;}
@@ -109,7 +109,7 @@ nav ul li:first-child { border-left:none; }
     -moz-box-sizing: border-box;
     -webkit-user-select: none;
     cursor: default;
-    display: inline-block;
+    display: block;
 }
 
 .button_base:hover {
@@ -172,7 +172,7 @@ nav ul li:first-child { border-left:none; }
     -moz-transition: left 0.30000000000000004s ease;
 }
 
-.table_list { width: 100%; text-align: center; border:1px solid #ff6e40; border-collapse: collapse;}
+.table_list { width: 100%; text-align: center;  border-collapse: collapse;}
 .table_list thead{text-align: center; }
 .table_list thead tr th{width:120px; border:1px solid #ff6e40; border-collapse: collapse; padding:5px;}
 .table_list tbody th{border:1px solid #ff6e40; border-collapse: collapse; width:120px; padding:5px;}
@@ -180,5 +180,16 @@ nav ul li:first-child { border-left:none; }
 .p_btn, .m_btn, .menu_del { width: 20px; height: 20px;}
 .menu_del { position:relative; left:67px; }
 .price_p { line-height: 5px; }
-
-
+.orderListBar{background-color: #702e2d;}
+.orderListBar table{padding:30px; width:100%;text-align: center;}
+.orderListBar table tr th{width:105px;}
+.table_tr2 td{padding-top:20px; padding-bottom: 20px;}
+.table_tr2 td:first-child {
+	width:250px;
+}
+.table_tr2 td:nth-child(2) {
+	width:100px;
+}
+.table_tr2 td:nth-child(3) {
+	width:300px;
+}
