--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/personalInfomationChange.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/personalInfomationChange.css
@@ -3,11 +3,13 @@
             display: none; /* Hidden by default */
             position: fixed; /* Stay in place */
             z-index: 1; /* Sit on top */
-            left: 0;
-            top: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
-            overflow: auto; /* Enable scroll if needed */
+/*             left: 0; */
+/*             top: 0; */
+            border: 2px solid black;
+		    border-radius: 10px;
+		    width: 400px;
+		    height: 400px;
+		    padding: 20px;
             background-color: rgb(0,0,0); /* Fallback color */
             background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
         }
@@ -18,14 +20,80 @@
             margin: 15% auto; /* 15% from the top and centered */
             padding: 20px;
             border: 1px solid #888;
-            width: 50%; /* Could be more or less, depending on screen size */                          
+            width: 400px !important;
+		    height: 400px !important; /* Could be more or less, depending on screen size */                          
         }
+        .modal-content h5{
+		    font-size: 21px;
+		    color: #d1840e;
+		    font-weight: 600;
+		    margin-left: 117px;
+		    margin-top: 10px;
+		    padding-bottom: 20px; 
+		}		
+		.pwUpdate {
+		    border-top: 2px solid #333;
+		    display: block;
+		}
+		.pwUpdate li {
+		    border-bottom: 1px solid #ccc;
+		    padding: 20px;
+		    font-size: 18px;
+		}
+		/*현재 비밀번호*/
+		.nowPw {
+		    border-radius: 5px;
+		    width: 140px;
+		    height: 30px;
+		    font-size: 15px;
+		    padding:0 0 2px 3px;
+		    margin-left: 20px;
+		    background-color: #fff; 
+		    border: 1px solid #999;
+		}
+		.newPw {
+		    border-radius: 5px;
+		    width: 140px;
+		    height: 30px;
+		    font-size: 15px;
+		    padding:0 0 2px 3px;
+		    margin-left: 20px;
+		    background-color: #fff;
+		    border: 1px solid #999;
+		}
+		.newPwCheck {
+		    border-radius: 5px;
+		    width: 140px;
+		    height: 30px;
+		    font-size: 15px;
+		    padding:0 0 2px 3px;
+		    margin-left: 20px;
+		    background-color: #fff;
+		    border: 1px solid #999;
+		}
+		/*비밀번호 변경 변경하기 버튼*/
+		.pwUpSubmit {
+		    width: 120px;
+		    height: 35px;
+		    font-size: 15px;
+		    background:#d1840e;
+		    color: #fff;
+		    margin: 0 auto;
+		    margin-top: 15px;
+		    display: block;
+		    text-align: center;
+		    outline: none;
+		    border-color:#e79210;
+		}
         /* The Close Button */
         .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
+        	position:absolute;
+		    color: #aaa;
+			right:20px;
+			top:25px;
+		    font-size: 35px !important; 
+/* 		    margin-top: 30px; */
+		    cursor: pointer;
         }
         .close:hover,
         .close:focus {
