--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mypage.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mypage.css
@@ -93,20 +93,33 @@ table {
     text-align: center;
     margin-left: 40px;
     border-color:#e79210;
+    color: #e69f33 !important;
+    font-weight: 600;
+    cursor: pointer;
 }
 /*카드등록 디자인*/
 .dropDown{
 /*    position: absolute;*/
     display: none;
 }
-.userPayCardUpdate {
-/*    background: #e69f33 !important; */
+.ButtonMyCard {
+    width: 92px;
+    height: 28px;
+    font-size: 16px;
+    background: #e69f33;
+    color: black;
+    text-align: center;
+    margin-left: 40px;
+    border-color:#e79210;
     color: #e69f33 !important;
     font-weight: 600;
     cursor: pointer;
 }
 .cardAdd_img {
     margin: 0 5px 10px 0;
+}
+.cardAdd_img2 {
+    margin: 0px 5px 10px -4px;
 }
 /*컨텐츠*/
 #contents {
@@ -344,7 +357,7 @@ table {
     text-align: justify;
     z-index: 10;
 /*     transform:  translate(-50%, -50%); */
-    border-radius: 10px;
+/*     border-radius: 10px; */
     box-shadow: 0 1px 1px 2px rgba(0.4, 0, 0, 0.4);
 }
 /*결제카드 등록*/
@@ -354,6 +367,7 @@ table {
     color: #d7ab29;
     font-weight: 900;
     text-align: center;
+    font-size: 25px;
 }
 .paymentCardAdd p1{
     display: inline-block;
@@ -408,7 +422,7 @@ table {
     text-align: center;
     outline: none;
     border-color:#e79210;
-    margin: 5px 0 5px;
+    margin: 0 5px 0 5px;
 }
 .paymentCardAdd:nth-child(6) {
 	margin-bottom:30px;
@@ -416,4 +430,58 @@ table {
 .Check {
     margin:0 auto;
     width:fit-content;
+}
+/*MY 카드*/
+ .MYcard {
+	display: none; /* Hidden by default */
+	position: fixed; /* Stay in place */
+	z-index: 1; /* Sit on top */
+	width: 400px;
+	height: 400px;
+	padding: 20px;
+/* 	margin-left: 70px; */
+/* 	margin-top:-100px; */
+}
+.BankName {
+    font-size: 35px;
+    color: #fff;
+    font-weight: 900;
+    padding: 20px 0 0 250px;
+}
+.MYcardNum{
+    display: inline-block;
+    font-size: 25px;
+    color: #fff;
+    font-weight: 900;
+    padding: 100px 0 0 30px;
+}
+.MYcardName{
+    font-size: 25px;
+    color: #fff;
+    font-weight: 600;
+    padding: 30px 0 0 30px;
+}
+/* Modal Content/Box */
+.cardmodal-content {
+ background-image: url(/resources/images/MYcard.png);
+ background-repeat: no-repeat;
+/*  margin: 15% auto; 15% from the top and centered */
+ padding: 20px;
+ width: 600px !important;
+ }
+/* 삭제하기  */
+.cardDelete {
+    width: 120px;
+    height: 35px;
+    font-size: 15px;
+    background:#d1840e;
+    color: #fff;
+    position:relative;
+    margin: 0 auto;
+    margin-top: 35px;
+    left:50px;
+    display: block;
+    text-align: center;
+    outline: none;
+    border-color:#e79210;	
 }
