--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mainIndex.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/mainIndex.css
@@ -110,6 +110,26 @@ a { text-decoration-line: none; color: rgba(255,255,255,0.5);}
 .navi ul { display: flex; float: right;}
 .item img{width: 100%;}
 
+.phoneDiv{display: inline-block; margin-bottom: 30px;}
+
+.selectPhone {
+    width: 92px;
+    /* height: 30px; */
+    line-height: 30px;
+    background-color: #efefef;
+    border-radius: 10px;
+    border: 1px solid #dedede;
+    padding: 10px;
+    /* margin-top: 3px; */
+    margin-bottom: 20px;
+    font-size: 0.9em;
+    color: #3a3a3a;
+    margin: 0 auto;
+   /*  display: block; */
+}
+
+
+
 .dropdown-menu > a{font-size: 15px !important; height:32px; line-height: 32px; color: #16181b;}
 /*carousel*/
       #slider{
