--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -56,7 +56,6 @@ nav ul li:first-child { border-left:none; }
     display: block;
     width: 55px;
     height: 40px;
-    /* background: url(/resources/images/search.png); */
     background-size: 28px 22px;
     background-position: 19px;
     background-repeat: no-repeat;
@@ -193,3 +192,52 @@ nav ul li:first-child { border-left:none; }
 .table_tr2 td:nth-child(3) {
 	width:300px;
 }
+
+/*zoomoutdown animation*/
+ .zoomOutDown {
+/*    position: absolute; */
+  animation-name: zoomOutDown;
+  animation-duration: 1s;
+  animation-fill-mode: both;
+  background-image:url("/resources/img/chickenMenu/chipao.png");
+  z-index: 99;
+  width:240px;
+  height: 200px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  }
+  @keyframes zoomOutDown {
+  40% {
+  opacity: 1;
+  z-index: 99;
+  transform: scale3d(.475, .475, .475) translate3d(0, -60px, 0);
+  animation-timing-function: cubic-bezier(0.550, 0.055, 0.675, 0.190);
+ 
+  }
+  100% {
+  opacity: 0;
+  transform: scale3d(.1, .1, .1) translate3d(0, 2000px, 0);
+  transform-origin: center bottom;
+  animation-timing-function: cubic-bezier(0.175, 0.885, 0.320, 1);
+  }
+ }
+ .modal_span { text-align: center;}
+ .modal_div {display: flex; justify-content: space-around; margin-top:30px;} 
+ .modal_div img{ width : 100px;  height:100px; border:2px solid black; padding:15px; border-radius: 10px;}
+ .modal_div > div > h4 { text-align:center; margin-top:10px;}
+ .tab_btn button { outline:0; }
+ .modal_set li { display:inline-block; margin-right:30px;}
+ .set_btn { border:none; background:transparent; cursor: pointer; font-size:20px; outline:0;}
+ .set_div { background: #D9CA66; text-align:center;}
+ .set_side_ul li {display:inline-block; }
+ .set_side_ul img {
+ 	width: 240px;
+    height: 200px;
+    margin-right: 50px;
+    cursor: pointer;
+    margin-top: 15px;
+    border: 1px solid #e3e3e3;
+    position: relative;
+    left: 50px;}
+ .set_side {position:relative; left:50px; top:20px; bottom:20px; display:inline-block;}
