--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -229,10 +229,10 @@ nav ul li:first-child { border-left:none; }
  .tab_btn button { outline:0; }
  .modal_set li { display:inline-block; margin-right:30px;}
  .set_btn { border:none; background:transparent; cursor: pointer; font-size:20px; outline:0;}
- .set_div { background: #D9CA66; text-align:center;}
+ .set_div { background: #D9CA66; text-align:center; border-radius: 8px;}
  .set_side_ul li {display:inline-block; }
  .set_side_ul img {
- 	width: 240px;
+/*  	width: 240px; */
     height: 200px;
     margin-right: 50px;
     cursor: pointer;
@@ -240,4 +240,5 @@ nav ul li:first-child { border-left:none; }
     border: 1px solid #e3e3e3;
     position: relative;
     left: 50px;}
- .set_side {position:relative; left:50px; top:20px; bottom:20px; display:inline-block;}
+ .set_side {max-width:900px; margin: 0 auto;}
+ 
