--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/css/pos.css
@@ -125,6 +125,7 @@ body{min-width: 1024px;}
 .right-section{width:61%; float: right; text-align: center;}
 /* .right-section > .right-table{width: 65%;} */
 .right-table > th {border-right:1px solid;}
+.right-talbe tr > th > a {color:white;}
 footer{clear: both; width: 35%;}
 .none{display: none;}
 .pName{background:#dfdfdf; border-radius:5px;}
@@ -385,7 +386,7 @@ footer{clear: both; width: 30%;}
          background-color: #216282; 
          opacity: 0.9; 
      }
-    
+  
 .titlecash{text-align: center;}
 
    .modalcard { 
@@ -410,8 +411,49 @@ footer{clear: both; width: 30%;}
          width: 500px; 
          height: 350px; 
          border-radius: 0.5rem; 
+         
      } 
-     
+    
+     .burgerOrSet{
+     	position:absolute;
+     	background:#d35448;
+     	width:430px;
+     	height:302px;
+     	top:30%;
+     	left:39%;
+     	border: 1px solid black;
+    	border-radius: 30px;
+     }
+     .burgerOrSet-content > .setSelect > ul > li > a > img{
+     	width:122px;
+     	margin-left:12px;
+     	margin-top:10px;
+     }
+     .burgerOrSet-content > .setSelect ul > li{
+     	border : 1px solid white;
+     	width:150px;
+     	height:141px;
+     	display:inline-block;
+     	margin-left:50px;
+     }
+     .burgerOrSet-content > .setSelect >ul{
+     	position : relative;
+     	left:-14px;
+     	top : 56px;
+     }
+     .burgerOrSetP{
+        position: relative;
+	    left: 51px;
+	    top: 14px;
+	    color:white;
+	    font-size:1em;
+     }
+     .setSideUl{
+     	border : 1px solid white;
+     }
+     .setDrinkUl{
+     	border : 1px solid white;
+     }
      div#select_box {
   position: relative;
   width: 200px;
