--- a/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
+++ b/Hamburger_Store_Managerment_System/src/main/webapp/resources/kiosk/css/screen.css
@@ -3,7 +3,9 @@
 .body_image {
     background-image:url('/resources/kiosk/images/background.jpg'); 
 	background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 121%;
+    background-attachment:fixed;
+    position:absolute;
     background-position: center center;
     margin: 0;
     min-width: 1024px;
@@ -25,7 +27,7 @@ nav { width:1024px; margin:0 auto;}
 nav ul{ padding-top:10px; text-align:center; }
 nav ul li { display:inline-block; border-left:1px solid #999; font:bold 12px Dotum; font-weight:700; padding: 0 40px; }
 nav ul li:first-child { border-left:none; }
-.order_div { border:1px solid white; width:1024px; margin:0 auto;} 
+.order_div { border:1px solid white; width:1024px; margin:0 auto; position: relative;} 
 .tab_cont { position:relative; left:50px; top:20px; bottom:20px;}
 .tab_cont li { color:white; display:inline-block;}
 .tab_cont li img { width:240px; height:200px; margin-right:50px; cursor: pointer; margin-top:15px; border:1px solid #e3e3e3; position: relative; left: 50px; }
@@ -42,10 +44,10 @@ nav ul li:first-child { border-left:none; }
     font-weight: 700;
     text-align: center;
     color: #333333;}
-.order_payment_div {float:right; height: 200px;}
+.order_payment_div {float:right; }
 .paymentBtn { width: 100%; height:40%; font-size:15pt; }
 .cancelBtn { width:100%; height:40%; font-size:15pt; }
-.total_table{ width:100%; height: 20%; padding-left:30px;}
+.total_table{ width:100%; height: 20%; text-align:center; padding: 10px;}
 .total_pay { padding: 5px 5px; }
 .title-span{color:#ffa940;}
 .center-wrap h2{color:rgb(133,42,42); text-align: center;}
@@ -99,9 +101,10 @@ nav ul li:first-child { border-left:none; }
     border: 0;
     font-size: 18px;
     position: relative;
-    top:95px;
-    width: 160px;
-    height: 50px;
+  /*   top:95px; */
+    width: 255px;
+    height: 76px;
+    line-height:50px;
     text-align: center;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -124,7 +127,7 @@ nav ul li:first-child { border-left:none; }
     position: absolute;
     text-align: center;
     width: 100%;
-    height: 50px;
+    height: 76px;
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -134,17 +137,18 @@ nav ul li:first-child { border-left:none; }
 .b03_skewed_slide_in div:nth-child(1) {
     color: #ff6e40;
     background-color: #ffffff;
+    height: 76px;
 }
 
 .b03_skewed_slide_in div:nth-child(2) {
     background-color: #ff6e40;
-    width: 230px;
+    width: 282px;
     transition: all 0.2s ease;
     -webkit-transition: all 0.2s ease;
     -moz-transition: all 0.2s ease;
-    transform: translate(-250px, 0px) skewX(-30deg);
-    -webkit-transform: translate(-250px, 0px) skewX(-30deg);
-    -moz-transform: translate(-250px, 0px) skewX(-30deg);
+    transform: translate(-350px, 0px) skewX(-30deg);
+    -webkit-transform: translate(-350px, 0px) skewX(-30deg);
+    -moz-transform: translate(-350px, 0px) skewX(-30deg);
 }
 
 .b03_skewed_slide_in div:nth-child(3) {
@@ -182,7 +186,7 @@ nav ul li:first-child { border-left:none; }
 .orderListBar{background-color: #702e2d;}
 .orderListBar table{padding:30px; width:100%;text-align: center;}
 .orderListBar table tr th{width:105px;}
-.table_tr2 td{padding-top:20px; padding-bottom: 20px;}
+.table_tr2 td{padding-top:8px;}
 .table_tr2 td:first-child {
 	width:250px;
 }
@@ -255,10 +259,37 @@ nav ul li:first-child { border-left:none; }
 .set_footer { margin-bottom: 20px;}
 .set_choice:hover {background:skyblue;}
 .set_cancel:hover {background:tomato;}
-.slide_div1 { width:600px; height:500px; border:1px solid black; line-height:300px; padding-left:150px;}
-.slide_div2 { width:100%; height:500px; border:1px solid black; display:inline-block;}
-.order_list_div2{  width:100%; height:500px;   overflow-y:scroll; border:1px solid black;}
+.slide_div1 { width:600px; border:1px solid black; line-height:300px; padding-left:150px;}
+.slide_div2 { width:100%; border:1px solid black; display:inline-block;}
+.order_list_div2{  width:100%;  overflow-y:scroll; border:1px solid black;}
 .table_list2 { width: 100%; text-align: center;  border-collapse: collapse;}
 .table_list2 thead{text-align: center; }
 .table_list2 thead tr th{width:120px; border:1px solid #ff6e40; border-collapse: collapse; padding:5px;}
 .table_list2 tbody th{border:1px solid #ff6e40; border-collapse: collapse; width:120px; padding:5px;}
+.swiper-container {
+	width:640px;
+	height:380px;
+	border:5px solid silver;
+	border-radius:7px;
+	box-shadow:0 0 20px #ccc inset;
+} 
+.ordertable{width: 100%; text-align: center; border-top:1px solid #c0c0c0; border-bottom:1px solid #c0c0c0; border-collapse: collapse;}
+.payfuture,.paymented{width: 100%; text-align: center; border: 1px solid #c0c0c0;}
+.payfuture li ,.paymented li{display: inline-block; margin-right: 50px;}
+.paykind{text-align: center; border: 1px solid #c0c0c0; width: 100%; border-collapse: collapse;}
+.paykind th{background-color: #c0c0c0;}
+.paykind th, .paykind td{padding: 10px;}
+.takeout_table{width: 100%; text-align: center; border: 1px solid #000; border-collapse: collapse;}
+.takeout_table th{background: #8e1306; color: #fff;}
+.takeout_table th, takeout_table,td{padding: 20px;}
+.choice_check img { width:100px; height:100px; }
+.sale_point_table {width: 100%; text-align: center; border: 1px solid #000; border-collapse: collapse;}
+.sale_point_table th{background: #8e1306; color: #fff;}
+.sale_point_table th, sale_point_table,td{padding: 20px;}
+.payment_table {width: 100%; text-align: center; border: 1px solid #000; border-collapse: collapse;}
+.payment_table th{background: #8e1306; color: #fff;}
+.payment_table th, payment_table,td{padding: 20px;}
+.payment_choice img { width:100px; height:100px; }
+/* .ad img { width: 50%; position:relative; left:500px;} */
+.ad{width: 100%;  position: absolute; top: 0; text-align: center;}
+.footer_div { border:1px solid black; width:100%; height:100px; position:relative; top:10px; }
